Add docs for employee endpoints
