# backend/src/config/swagger.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.1.0",
+  "openapi": "3.0.0",
   "info": {
     "title": "Authentication API",
     "version": "1.0.0",
@@ -109,7 +109,7 @@
         "summary": "Create a new user with email and password",
         "description": "Create a new user with an email and password. Only administrators can create new users.\nPasswords are hashed using bcrypt with a salt round of 12 before storing.\n",
         "tags": [
-          "Authentication"
+          "Employee"
         ],
         "requestBody": {
           "description": "User information including email and password.",
@@ -212,12 +212,12 @@
         }
       }
     },
-    "/employees/{id}": {
+    "/employee/{id}": {
       "delete": {
         "summary": "Delete an employee by ID",
         "description": "Deletes an employee by their unique ID.",
         "tags": [
-          "Employees"
+          "Employee"
         ],
         "parameters": [
           {
@@ -288,7 +288,7 @@
         "summary": "Get an employee by ID",
         "description": "Retrieves an employee's information by their unique ID.",
         "tags": [
-          "Employees"
+          "Employee"
         ],
         "parameters": [
           {
@@ -398,7 +398,7 @@
         "summary": "Update an employee by ID",
         "description": "Updates an employee's information by their unique ID.",
         "tags": [
-          "Employees"
+          "Employee"
         ],
         "parameters": [
           {
@@ -477,12 +477,12 @@
         }
       }
     },
-    "/employees": {
+    "/employee": {
       "get": {
         "summary": "Get all employees",
         "description": "Retrieves a list of all employees with their information.",
         "tags": [
-          "Employees"
+          "Employee"
         ],
         "responses": {
           "200": {
